<?xml version="1.0"?>
<?xml-model
  href="http://download.ros.org/schema/package_format2.xsd"
  schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="2">
  <name>icon_shared_memory_vendor</name>
  <version>0.1.0</version>
  <description>
    ICON's shared memory comms libraries.
  </description>

  <maintainer email="nilsb@intrinsic.ai">Nils Berg</maintainer>

  <license>Apache-2.0</license>  <!-- The library we vendor here is CC0 (public domain as far as possible, legally -->

  <author email="nilsb@intrinsic.ai">Nils Berg</author>

  <buildtool_depend>ament_cmake</buildtool_depend>
  <buildtool_depend>ament_cmake_vendor_package</buildtool_depend>

  <depend>flatbuffers_vendor</depend>
  <depend>tl_expected_vendor</depend>
  <depend>eigen_vendor</depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
